--- a/old site/index.css
+++ b/old site/index.css
@@ -1,7 +1,10 @@
 
 body {
 font-family: Arial, Helvetica, sans-serif;
-background: linear-gradient(to right, #006d1f, #6c7715);
+/* background: linear-gradient(to right, #006d1f, #6c7715); */
+background-image: url( './resources/wave-haikei.svg' );
+background-position: center;
+background-size: cover;
 }
 
 a {
@@ -12,22 +15,21 @@ font-weight: bold;
 .linkBox {
 display: flex;
 flex-direction: column;
-align-items: center;
 text-align: center;
-background-color: #ffd9006a;
+background: linear-gradient(145deg, #828282, #4a4a4a);
+box-shadow:  5px 5px 10px #1e1e1e,
+             -5px -5px 10px #6c6c6c;
 color: #fff;
 padding: 12px 24px;
-border: none;
 cursor: pointer;
 border-radius: 25px;
 margin: 10px;
-
 width:75%;
 max-width: 500px;
 }
 
 .linkBox:hover {
-background-color: #609e4b;
+    background: linear-gradient(145deg, #ffffff, #4a4a4a);
 }
 
 .links {
@@ -42,7 +44,7 @@ display: block;
 margin: 0 auto;
 width: 100%;
 height: 100%;
-max-width: 500px;
+max-width: 300px;
 max-height: 500px;
 
 }
