--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: bold;
   text-align: center;
   margin: 0 auto;
@@ -37,23 +37,18 @@ h1 {
   justify-self: top;
 }
 
-.navElement {
-  color: black;
-  padding: 31px;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 16px;
-}
-
 .navElement_active {
-  color: var(--gold);
+  background-color: var(--white);
+  color: green;
   padding: 31px;
-  text-decoration: none;
+  /* text-decoration: none; */
   font-weight: bold;
   font-size: 16px;
+  border: none;
+  cursor: pointer;
 }
 
-.navElement:hover {
+.navElementButton:hover {
   background-color: var(--gold);
   border-radius: 25px;
   cursor: pointer;
@@ -462,6 +457,11 @@ h1 {
   justify-content: center;
   align-items: center;
   margin: 0 auto;
+  /* background-image: url("../public/MtnRange.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw; */
   /* border: 2px solid var(--gold); */
   /* margin: 20px; */
 }
